--- a/api-runtime/rest-runtime/admin-web/html/credential.html
+++ b/api-runtime/rest-runtime/admin-web/html/credential.html
@@ -71,6 +71,20 @@
         padding: 20px;
         border-radius: 5px;
         text-align: left;
+        position: relative;
+    }
+    .overlay-close-btn {
+        background-color: #f0f0f0;
+        color: #d9534f;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        cursor: pointer;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+    .overlay-close-btn:hover {
+        background-color: #e0e0e0;
     }
     .fixed-header {
         position: fixed;
@@ -664,6 +678,7 @@
 
     <div id="overlay" class="overlay">
         <div class="overlay-content">
+            <button type="button" class="overlay-close-btn" onclick="hideOverlay()">X</button>
             <h2>[<span id="overlayProviderName"></span>] Add Credential Info</h2>
             <div class="drop-zone">Drag & Drop a credential file here (or manually enter the details below)</div>
             <form id="addCredentialForm" onsubmit="event.preventDefault(); postCredential();">
