--- a/api-runtime/rest-runtime/admin-web/html/keypair.html
+++ b/api-runtime/rest-runtime/admin-web/html/keypair.html
@@ -188,6 +188,7 @@
         text-align: left;
         font-family: Arial, sans-serif;
         font-size: 12px;
+        position: relative;
     }
     .tag-container {
         display: inline-block;
@@ -220,6 +221,10 @@
         display: flex;
         align-items: center;
         margin-bottom: 10px;
+    }
+
+    .add-tag-overlay-content .tag-overlay-input-group:first-of-type {
+        margin-top: 30px;
     }
 
     .add-tag-overlay-content .tag-overlay-input-group label {
@@ -310,14 +315,18 @@
         position: relative;
     }
 
-    .tag-overlay-content .close-btn {
-        position: absolute;
-        top: 5px;
-        right: 10px;
-        background: none;
-        border: none;
-        font-size: 16px;
+    .overlay-close-btn {
+        background-color: #f0f0f0;
+        color: #d9534f;
+        border: 1px solid #ccc;
+        border-radius: 4px;
         cursor: pointer;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+    .overlay-close-btn:hover {
+        background-color: #e0e0e0;
     }
 
     .tag-overlay-content .button-group {
@@ -389,15 +398,7 @@
         word-wrap: break-word;
     }
 
-    .system-id-overlay .close-btn {
-        position: absolute;
-        top: -15px;
-        right: -5px;
-        background: none;
-        border: none;
-        font-size: 16px;
-        cursor: pointer;
-    }
+
 
     .copy-btn {
         background: none;
@@ -482,6 +483,7 @@
 
     <div id="overlay" class="overlay">
         <div class="overlay-content">
+            <button type="button" class="overlay-close-btn" onclick="hideOverlay()">X</button>
             <h2>Add New KeyPair</h2>
             <form id="addKeyPairForm" onsubmit="event.preventDefault(); postKeyPair();">
                 <input type="hidden" id="connConfig" value="{{.ConnectionConfig}}">
@@ -516,7 +518,7 @@
 
     <div id="system-id-overlay" class="system-id-overlay">
         <div class="system-id-overlay-content">
-            <button class="close-btn" onclick="closeSystemIdOverlay()">x</button>
+            <button class="overlay-close-btn" onclick="closeSystemIdOverlay()">X</button>
             <h2>System ID (Managed by CSP)</h2>
             <p id="fullSystemId"></p>
             <button class="copy-btn" onclick="copySystemId()">📋</button>
@@ -704,7 +706,7 @@
         keyPairNameInput.value = `${region}-keypair-${Math.random().toString(36).substring(2, 8)}`;
 
         document.getElementById('overlay').style.display = 'flex';
-        document.addEventListener('keydown', handleEsc);
+        document.addEventListener('keydown', handleOverlayEsc);
         clearFormFields();
     }
 
@@ -721,11 +723,11 @@
 
     function hideOverlay() {
         document.getElementById('overlay').style.display = 'none';
-        document.removeEventListener('keydown', handleEsc);
+        document.removeEventListener('keydown', handleOverlayEsc);
         clearFormFields();
     }
 
-    function handleEsc(event) {
+    function handleOverlayEsc(event) {
         if (event.key === "Escape") {
             hideOverlay();
         }
@@ -753,7 +755,7 @@
         const tagOverlayContent = document.querySelector('.tag-overlay-content');
 
         tagOverlayContent.innerHTML = `
-            <button class="close-btn" onclick="closeTagOverlay()">x</button>
+            <button class="overlay-close-btn" onclick="closeTagOverlay()">X</button>
             <p>${tag}</p>
             <div class="button-group">
                 <button onclick="deleteTag('${tag}', '${resourceType}', '${resourceName}')">Delete</button>
@@ -763,14 +765,14 @@
 
         tagOverlay.style.display = 'flex';
 
-        document.addEventListener('keydown', handleEscTagOverlay);
+        document.addEventListener('keydown', handleTagOverlayEsc);
         document.addEventListener('click', handleClickOutsideOverlay);
     }
 
     function closeTagOverlay() {
         const tagOverlay = document.getElementById('tag-overlay');
         tagOverlay.style.display = 'none';
-        document.removeEventListener('keydown', handleEscTagOverlay);
+        document.removeEventListener('keydown', handleTagOverlayEsc);
         document.removeEventListener('click', handleClickOutsideOverlay);
     }
 
@@ -778,6 +780,7 @@
         const addTagOverlay = document.getElementById('add-tag-overlay');
         const addTagOverlayContent = document.querySelector('.add-tag-overlay-content');
         addTagOverlayContent.innerHTML = `
+            <button type="button" class="overlay-close-btn" onclick="closeAddTagOverlay()">X</button>
             <div class="tag-overlay-input-group">
                 <label for="tagOverlayTagKey">Tag Key:</label>
                 <input type="text" id="tagOverlayTagKey" name="tagKey" required>
@@ -792,16 +795,16 @@
             </div>
         `;
         addTagOverlay.style.display = 'flex';
-        document.addEventListener('keydown', handleEscAddTagOverlay);
+        document.addEventListener('keydown', handleAddTagOverlayEsc);
     }
 
     function closeAddTagOverlay() {
         const addTagOverlay = document.getElementById('add-tag-overlay');
         addTagOverlay.style.display = 'none';
-        document.removeEventListener('keydown', handleEscAddTagOverlay);
+        document.removeEventListener('keydown', handleAddTagOverlayEsc);
     }
 
-    function handleEscAddTagOverlay(event) {
+    function handleAddTagOverlayEsc(event) {
         if (event.key === "Escape") {
             closeAddTagOverlay();
         }
@@ -1012,16 +1015,16 @@
         fullSystemIdElement.textContent = systemId;
 
         overlay.style.display = 'block';
-        document.addEventListener('keydown', handleEscSystemIdOverlay);
+        document.addEventListener('keydown', handleSystemIdOverlayEsc);
     }
 
     function closeSystemIdOverlay() {
         const overlay = document.getElementById('system-id-overlay');
         overlay.style.display = 'none';
-        document.removeEventListener('keydown', handleEscSystemIdOverlay);
+        document.removeEventListener('keydown', handleSystemIdOverlayEsc);
     }
 
-    function handleEscSystemIdOverlay(event) {
+    function handleSystemIdOverlayEsc(event) {
         if (event.key === "Escape") {
             closeSystemIdOverlay();
         }
